--- a/static/styles.css
+++ b/static/styles.css
@@ -67,6 +67,10 @@ div > p {
     opacity: 100%;
 }
 
+.hi {
+    visibility: hidden;
+}
+
 .btw {
     font-size: 1.1rem;
     color: #8b8a8aef;
@@ -270,7 +274,7 @@ part1.5
 
 .container {
     width: 100%;
-    height: auto;
+    height: 93vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
