--- a/static/styles.css
+++ b/static/styles.css
@@ -274,7 +274,7 @@ part1.5
 
 .container {
     width: 100%;
-    height: 93vh;
+    max-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -427,7 +427,6 @@ a {
     justify-self: center;
     text-align: center;
     z-index: 1;
-    transform: translate(00px, 00px);
     font-family: "Satisfy", "Noto Sans Mono", "Bungee Spice", "Nabla";
     font-weight: 700;
     margin: 0;
@@ -494,7 +493,6 @@ part 5 - pics
     position: relative;
     top: 0%;
     left: 00%;
-    transform: translate(0%, 0%);
     display: block;
     margin: auto;
     margin-top: 10%;
@@ -838,7 +836,6 @@ part 7 - responsivity adjustments (screen width based)
         justify-self: center;
         text-align: center;
         z-index: 1;
-        transform: translate(00px, 00px);
         font-family: "Satisfy", "Noto Sans Mono", "Bungee Spice", "Nabla";
         font-weight: 400;
         margin: 0;
