--- a/static/styles.css
+++ b/static/styles.css
@@ -274,7 +274,7 @@ part1.5
 
 .container {
     width: 100%;
-    max-height: 100vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
