--- a/static/styles.css
+++ b/static/styles.css
@@ -274,7 +274,7 @@ part1.5
 
 .container {
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -390,7 +390,7 @@ a {
 
 .aboutme {
     width: 90%;
-    margin: auto;
+    /*margin: auto;*/
     padding: 20px;
 }
 
@@ -682,7 +682,7 @@ part 7 - responsivity adjustments (screen width based)
 
     .aboutme {
         width: 90%;
-        margin: auto;
+        /*margin: auto;*/
         padding: 10px 0;
     }
 
